--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/NickolasBoyer/asciiplayer.git"
+    "url": "git+https://github.com/willwillems/asciiplayer.git"
   },
   "keywords": [
     "ascii"
@@ -16,7 +16,7 @@
   "author": "Will Willems",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/NickolasBoyer/asciiplayer/issues"
+    "url": "https://github.com/willwillems/asciiplayer/issues"
   },
-  "homepage": "https://nickolasboyer.github.io/asciiplayer/"
+  "homepage": "https://willwillems.github.io/asciiplayer/"
 }
